Details of processing added

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4Hyqy-KZ3Eu",
-        "outputId": "98a4d658-a44c-49c9-c8db-8d9d2703bc76"
+        "outputId": "9103f611-7ba2-4541-ee61-0efe8fffa963"
       },
       "outputs": [
         {
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "MwqF72o5A4-2"
       },
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "collapsed": true,
         "id": "qhvZxm9n-jmF"
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "qQ54WqPC91ZF"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "Mw2f3Oyj7z4b"
       },
@@ -244,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
       },
@@ -377,20 +377,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
-          "background_save": true,
-          "base_uri": "https://localhost:8080/",
-          "height": 402
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_1pcZKGXL-OM",
-        "outputId": "66391140-a941-4315-f7ac-c4ad0d6e8a64"
+        "outputId": "bc5f272c-5ff0-486d-97eb-b82302260847"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1.Split Adresses...\n",
             "2.Extract Features and Labels...\n",
@@ -398,10 +396,37 @@
           ]
         },
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "  9%|▉         | 327/3508 [00:39<24:38,  2.15it/s]"
+            "100%|█████████| 3509/3509 [26:22<00:00,  2.22it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "------------------------Test Dataset\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|███████████| 887/887 [06:48<00:00,  2.17it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.Windowing...\n",
+            "------------------------Train Dataset\n",
+            "------------------------Test Dataset\n",
+            "4.Normalizing...\n",
+            "5.Calculate Class Weight...\n",
+            "CPU times: user 1min 27s, sys: 8.35 s, total: 1min 35s\n",
+            "Wall time: 33min 28s\n"
           ]
         }
       ],
@@ -443,7 +468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "5X6ABVhhLfNk"
       },
@@ -467,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "qp2AhaTKkGxN",
         "colab": {
@@ -505,7 +530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "lXXuUHUODbJL"
       },
@@ -596,7 +621,7 @@
       "metadata": {
         "id": "IGgWBPtvYrrf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -616,7 +641,7 @@
         "id": "TRjn12NRwgUb",
         "outputId": "41a4d828-d87f-4ff2-d839-3de3c7cc6f90"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -785,7 +810,7 @@
       "metadata": {
         "id": "elTm0CS_Fnvz"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -821,7 +846,7 @@
       "metadata": {
         "id": "CYhDyLekeZVa"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -983,7 +1008,7 @@
       "metadata": {
         "id": "IWaY8m0jJzxu"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -998,7 +1023,7 @@
       "metadata": {
         "id": "c0eccXuZbDBx"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1032,7 +1057,7 @@
         },
         "outputId": "18f9a5a4-d1ff-4d15-d493-73a209f73cdd"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1164,7 +1189,7 @@
         "id": "7viiuY4BdAK0",
         "outputId": "2d034e59-d7aa-4118-9e9f-5e33a4f778d8"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,7 +1349,7 @@
         "id": "kQDbYzy-dZJg",
         "outputId": "a14cd266-adcd-445c-9dc4-7b88dbc87e6e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1470,7 +1495,7 @@
       "metadata": {
         "id": "zx57woHFKOHl"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1501,7 +1526,7 @@
         "id": "7f4geucVKQpj",
         "outputId": "d9927ce7-a128-4eba-a33a-ee35844fb56b"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
