--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -612,7 +612,7 @@
         "                    }\n",
         "\n",
         "\n",
-        "tradional_models = Traditional_Models(models = {'Logestic Regression':LogisticRegression(class_weight=class_weight),\n",
+        "tradional_models = Traditional_Models(models = {'Logistic Regression':LogisticRegression(class_weight=class_weight),\n",
         "                                                'Random Forest':RandomForestClassifier(class_weight=class_weight),\n",
         "                                                'KNN':KNeighborsClassifier(),\n",
         "                                                'Decision Tree': DecisionTreeClassifier(class_weight=class_weight)},\n",
@@ -1922,7 +1922,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvcMMINUAZPS1oHJKiE+xD",
+      "authorship_tag": "ABX9TyNUt8ddzbVDVrDxg3dYvWfu",
       "include_colab_link": true
     },
     "kernelspec": {
